src/index.css
/* ... */
.location {
  position: relative;
  z-index: 3;
  color: white;
  top: 0;
  right: 0;
}

.location p {
  top: 0;
  right: 0;
  position: relative;
}

/* Background Section CSS */
.background {
  position: fixed;
  width: 100%;
  height: 100%;
  background: linear-gradient(0deg, #000010, #202061, #12123b, #0a0a30, #000010);
  z-index: -1;
}

/* Header Section CSS */
.header {
  background: #00001076;
}
  
.nav {
  justify-content: flex-end;
}

.nav ul {
  list-style-type: none;
  text-decoration: none;
  display: flex;
  gap: 70px;
  margin-left: auto;
  margin-right: 100px;
  padding: 0;
}

.nav li {
  position: relative;
}

.nav li a {
  color: #fff;
  text-decoration: none;
  transition: transform 0.2s;
  padding: 8px 16px;
  border-radius: 50px;
  display: inline-block;
  background-color: transparent;
  z-index: 1;
  position: relative;
}

.nav li a:hover {
  transform: translateY(-2px);
  border-radius: 50px;
}

.nav li a::before {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  width: 120%;
  height: 120%;
  background: radial-gradient(circle, rgba(0, 123, 255, 0.7), transparent);
  border-radius: 50%;
  transform: translate(-50%, -50%) scale(0);
  transition: transform 0.2s ease-in-out;
  pointer-events: none;
  z-index: 0;
}

.nav li a:hover::before {
  transform: translate(-50%, -50%) scale(1);
}

/* Background CSS */
.star {
  position: absolute;
  background-color: white;
  border-radius: 50%;
  animation: twinkle 3s infinite alternate;
}

@keyframes twinkle {
  0% {
    opacity: 0.3;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0.3;
  }
}

.profile-img {
  width: 30%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.subtitle {
  font-size: 1rem;
  color: #ccc;
  margin: 5px 0;
  font-weight: 200;
  margin-top: 20px;
}

.extra {
  font-size: 1.5rem;
  color: #ffffff;
  margin: 5px auto;
  color: #ccc;
  font-weight: 100;
  max-width: 600px;
}

.word-list span {
  font-size: 2.8rem;
  font-weight: bold;
  color: white;
  height: 2.8rem;
  line-height: 2.8rem;
  display: block;
  text-align: left;
}

.external-links {
  display: flex;
  gap: 20px;
  justify-content: center;
}

.external-links img, .footer-links img {
  width: 40px;
  opacity: 0.75;
  justify-content: space-between;
  margin-top: 10px;
  transition: transform 0.2s ease-in-out;
}

.external-links img:hover, .footer-links img:hover {
  opacity: 100%;
  transition: opacity 0.3s ease-in-out;
  cursor: pointer;
  transform: translateY(-2px);
  transition: transform 0.2s ease-in-out;
}

@keyframes change {
  0% {
    color: #ff0096;
  }
  50% {
    color: #00d1ff;
  }
  100% {
    color: #ff0096;
  }
}

@keyframes text-change {
  0% { transform: translateY(0); }
  27% { transform: translateY(0); }
  33% { transform: translateY(-100%); }
  60% { transform: translateY(-100%); }
  66% { transform: translateY(-200%); }
  94% { transform: translateY(-200%); }
  100% { transform: translateY(0); }
}

/* Scroll Section CSS */
.scroll-container {
  position: relative;
  width: 100%;
  height: 150px;
  display: flex;
  justify-content: center;
}

.scroll-down {
  position: absolute;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
  animation: bounce 2s infinite;
  transition: opacity 0.3s ease-in-out;
  opacity: 50%;
}

.scroll-down:hover {
  opacity: 100%;
  transition: opacity 0.3s ease-in-out;
  animation-play-state: paused;
  cursor: pointer;
}

@keyframes bounce {
  0%, 100% {
    transform: translateX(-50%) translateY(0);
  }
  50% {
    transform: translateX(-50%) translateY(-10px);
  }
}

/* About Section CSS */
.about {
  text-align: center;
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 150px;
  padding: 30px;
}

.photo-stack {
  position: relative;
  top: 0;
  left: 0;
  width: 550px;
  height: 400px;
}

.left-line p {
  width: 550px;
  text-align: center;
  margin: auto;
  margin-top: 30px;
}

.about-slide {
  position: absolute;
  top: 0;
  left: 0;
  width: 550px;
  height: 400px;
  object-fit: cover;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  transition: transform 0.3s;
  z-index: 1;
}

.about-slide.active {
  opacity: 1;
  z-index: 2;
  box-shadow: 0 8px 32px rgba(0,0,0,0.4);
}

.left-arrow, .right-arrow {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
  opacity: 0.7;
  transition: opacity 0.3s ease-in-out, transform 0.2s ease-in-out;
  z-index: 3;
}

.left-arrow {
  left: -50px;
}

.right-arrow {
  right: -50px;
}

.left-arrow:hover, .right-arrow:hover {
  opacity: 1;
  transform: translateY(-50%) scale(1.1);
  transition: opacity 0.3s ease-in-out, transform 0.2s ease-in-out;
}

@keyframes flick {
  0% {
    opacity: 0.7;
    transform: scale(1);
    z-index: 2;
  }
  50% {
    opacity: 1;
    transform: scale(1.2);
    z-index: 2;
  }
  100% {
    opacity: 1;
    transform: scale(1);
    z-index: 2;
  }
}

.experience {
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.exp-modal {
  background: #141415;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  padding: 20px;
  width: 600px;
  max-width: 90vw;
}

.exp-nav, .technical-nav {
  position: relative;
  display: flex;
  background: rgba(255,255,255,0.03);
  border-radius: 8px;
  overflow: hidden;
  justify-content: center;
  border: 1px solid white;
  width: 50%;
  margin: 0 auto;
  min-width: 280px;
}

.exp-nav p, .technical-nav p {
  flex: 1;
  text-align: center;
  padding: 12px 0;
  margin: 0;
  cursor: pointer;
  z-index: 1;
  position: relative;
  color: #fff;
  font-weight: 500;
  transition: color 0.2s, transform 0.2s ease-in-out;
}

.exp-nav p.active, .technical-nav p.active {
  background-color: #007bff;
  color: white;
  opacity: 1;
  pointer-events: none;
}
/* ... */

